--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Open Sourcing the User Experience for the IoT</title>
+		<title>Pike Street Theme</title>
 
 		<meta name="description" content="A Microsoft theme for the amazing reveal.js">
 		<meta name="author" content="Felix Rieseberg">
