--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 						<h1 class="accent">Pike Street</h1>
 					</div>
 					<small>Felix Rieseberg<br />Open Source Engineer, Microsoft</small>
+
+					<aside class="notes">
+						Hi, I'm a Speaker Note. You can open the Speaker View by hitting [S] on your keyboard.
+					</aside>
 				</section>
 
 				<section class="inverse">
