Remove Script Font

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<section data-background-video="https://compass-ssl.surface.com/assets/11/4e/114ea758-b2b9-4567-bedd-77086c3d80fb.mp4?n=vid-loop-100314.mp4">
 					<div class="accent">
 						<h2>Reveal.js Theme</h2>
-						<h1 class="accent">Pike Street</h1>
+						<h1>Pike Street</h1>
 					</div>
 					<small>Felix Rieseberg<br />Open Source Engineer, Microsoft</small>
 
